# django-postgres-audit-log

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linting.yml  tests.yml
audit_log/: __init__.py  context_managers.py  decorators.py  fields.py  managers.py  middleware.py  models.py  schema.py  services.py  types.py  utils.py
audit_log/db/backend/: base.py  schema.py
audit_log/db/migrations/: operations.py
audit_log/management/: base.py
tests/: conftest.py  models.py  settings.py  urls.py  views.py
tests/management/commands/: some_command.py
tests/migrations/: 0001_initial.py  0002_auto_20201206_0239.py  0003_remove_mynolongerauditloggedmodel_audit_logs.py
tests/tests/: conftest.py  test_commands.py  test_middleware.py  test_models.py  test_utils.py  test_views.py
