[tool.poetry]
name = "django-postgres-audit-log"
version = "0.0.1a0"
description = ""
authors = ["Sigurd Ljødal <544451+ljodal@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
pylint = "^2.6.0"
pylint-django = "^2.3.0"
pytest = "^6.1.2"
pytest-django = "^4.1.0"
django-stubs = "^1.7.0"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = "*migrations*"
