[metadata]
name = django-postgres-audit-log
version = attr: audit_log.VERSION
description = Audit logging for Django based on Postgres triggers
author = Sigurd Ljødal
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

project_urls =
    Source=https://github.com/ljodal/django-postgres-audit-log
    Tracker=https://github.com/ljodal/django-postgres-audit-log/issues

[options]
zip_safe = True
include_package_data = False
packages = audit_log
install_requires =
    django>=3.1
    psycopg2>=2.5.4

[flake8]
max-line-length = 80
max-complexity = 12
ignore = E501
select = C,E,F,W,B9
exclude = .git,.venv,*migrations*

[mypy]
python_version = 3.7
strict_optional = False
plugins = mypy_django_plugin.main

ignore_errors = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_unused_ignores = True
warn_return_any = True

[mypy.plugins.django-stubs]
django_settings_module = tests.settings

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-django.db.backends.postgresql.schema]
ignore_missing_imports = True
